# comprehensive-rust-code

./: .gitignore  Cargo.toml  README.md
day1/06_basic_syntax/: Cargo.toml
day1/06_basic_syntax/src/: collatz_conjecture.rs  compound_types.rs  dangling_reference.rs  fizzbuzz.rs  methods.rs  reference.rs  slice.rs  string_vs_str.rs
day1/07_exercises/: Cargo.toml
day1/07_exercises/src/: bonus_question.rs  conversions.rs  transpose_matrix.rs
day1/08_variables/: Cargo.toml
day1/08_variables/src/: main.rs  scope.rs  static_const_var.rs
day1/09_memory_management/: Cargo.toml
day1/09_memory_management/examples/: scope_ptr_memory.cpp
day1/09_memory_management/src/: stack_memory.rs
day1/10_ownership/: Cargo.toml
day1/10_ownership/src/: borrow.rs  copy_clone.rs  lifetime_data.rs  lifetime_func.rs  lifetime_func2.rs  move_semantics.rs  shared_unique_borrow.rs
day1/11_exercises/: Cargo.toml
day1/11_exercises/src/: iter_ownership.rs  library.rs
day2/12_structs/: Cargo.toml
day2/12_structs/src/: enum_random.rs  enum_size.rs  structs.rs  variant_payloads.rs
day2/13_methods/: Cargo.toml
day2/13_methods/src/: methods.rs  race_methods.rs
day2/16_pattern/: Cargo.toml
day2/16_pattern/src/: destructuring_enums.rs  destructuring_structs.rs  match_like_switch.rs
day2/17_exercises/: Cargo.toml
day2/17_exercises/src/: health.rs  polygon.rs
day2/18_control/: Cargo.toml
day2/18_control/src/: condition.rs  match_expr.rs  while_expr.rs
day2/19_standard_library/: Cargo.toml
day2/19_standard_library/src/: box.rs  main.rs  rc.rs
day2/20_modules/src/: main.rs
day2/21_exercises/: Cargo.toml
day2/21_exercises/src/: luhn_algo.rs  routing_component.rs
day3/23_generics/: Cargo.toml
day3/23_generics/src/: generics_data.rs  generics_method.rs
day3/24_traits/: Cargo.toml
day3/25_important_traits/: Cargo.toml
day3/25_important_traits/src/: from_iterator.rs  operator_overloading.rs  read_and_write.rs
day3/26_exercise/: Cargo.toml
day3/26_exercise/src/: better_exercise.rs  main.rs
day3/27_error_handling/: Cargo.toml
day3/27_error_handling/src/: context_error.rs  converting_error.rs  deriving_error.rs  dynamic_error.rs  panics.rs  propagating_errors.rs  structure_error.rs
day3/28_testing/: Cargo.toml
day3/28_testing/src/: doc_test.rs  test_modules.rs  unit_test.rs
day3/29_unsafe_rust/: Cargo.toml
day3/29_unsafe_rust/src/: deref_raw_pointers.rs  mutable_static_variables.rs  unions.rs  unsafe_func.rs
day3/30_exercise/: Cargo.toml
day3/30_exercise/src/: main.rs
day3/important_traits/: Cargo.toml
day3/important_traits/src/: default_trait.rs  drop_trait.rs
day3/traits/: Cargo.toml
day3/traits/src/: main.rs  trait_bounds.rs  trait_objects.rs
day4/32_concurrency/: Cargo.toml
day4/32_concurrency/src/: arc.rs  arc_and_mutex.rs  bounded_channels.rs  channels.rs  scoped_thread.rs  threads.rs  unbounded_channels.rs
day4/33_exercise/: Cargo.toml
day4/33_exercise/src/: link_checker.rs  main.rs
