[workspace]

members = [
    "day1/06_basic_syntax",
    "day1/07_exercises",
    "day1/08_variables",
    "day1/09_memory_management",
    "day1/10_ownership",
    "day1/11_exercises",
    "day2/12_structs",
    "day2/13_methods",
    "day2/16_pattern",
    "day2/17_exercises",
    "day2/18_control",
    "day2/19_standard_library",
    "day2/20_modules",
    "day2/21_exercises",
    "day3/23_generics",
    "day3/24_traits",
    "day3/25_important_traits",
    "day3/26_exercise",
    "day3/27_error_handling",
    "day3/28_testing",
    "day3/29_unsafe_rust",
    "day3/30_exercise",
    "day4/32_concurrency",
    "day4/33_exercise",
]