[package]
name = "control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day2_condition"
path = "src/condition.rs"

[[bin]]
name = "day2_while_expr"
path = "src/while_expr.rs"

[[bin]]
name = "day2_match_expr"
path = "src/match_expr.rs"


[dependencies]
