[package]
name = "exercises21"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day2_luhn_algo"
path = "src/luhn_algo.rs"

[[bin]]
name = "day2_routing_component"
path = "src/routing_component.rs"


[dependencies]
