[package]
name = "error_handling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day3_panics"
path = "src/panics.rs"

[[bin]]
name = "day3_structure_error"
path = "src/structure_error.rs"

[dependencies]
