[package]
name = "unsafe_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day3_deref_raw_pointers"
path = "src/deref_raw_pointers.rs"

[[bin]]
name = "day3_mutable_static_variables"
path = "src/mutable_static_variables.rs"

[[bin]]
name = "day3_unions"
path = "src/unions.rs"

[[bin]]
name = "day3_unsafe_func"
path = "src/unsafe_func.rs"

[dependencies]
