[package]
name = "important_traits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day3_iterator"
path = "src/iterator.rs"

[[bin]]
name = "day3_from_iterator"
path = "src/from_iterator.rs"

[[bin]]
name = "day3_read_and_write"
path = "src/read_and_write.rs"

[dependencies]
