[package]
name = "traits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day3_trait_objects"
path= "src/trait_objects.rs"

[[bin]]
name = "day3_deriving_traits"
path = "src/deriving_traits.rs"

[dependencies]
