[package]
name = "concurrency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day4_threads"
path= "src/threads.rs"

[[bin]]
name = "day4_scoped_thread"
path = "src/scoped_thread.rs"

[[bin]]
name = "day4_channels"
path = "src/channels.rs"

[[bin]]
name = "day4_unbounded_channels"
path = "src/unbounded_channels.rs"

[[bin]]
name = "day4_bounded_channels"
path = "src/bounded_channels.rs"

[[bin]]
name = "day4_arc"
path = "src/arc.rs"

[[bin]]
name = "day4_mutex"
path = "src/mutex.rs"

[[bin]]
name = "day4_arc_and_mutex"
path = "src/arc_and_mutex.rs"

[dependencies]
