[package]
name = "exercise33"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day4_link_checker"
path = "src/link_checker.rs"

[dependencies]
reqwest = { version = "0.11.16", features = ["blocking", "rustls-tls"] }
scraper = "0.15.0"
thiserror = "1.0.40"
